test/e2e/fixtures/tcpmapping-weight/manifests.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tgt70
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tgt70
  template:
    metadata:
      labels:
        app: tgt70
    spec:
      containers:
        - name: kat-server
          image: (env('KAT_SERVER_IMAGE'))
          imagePullPolicy: IfNotPresent
          command: ["/work/kat-server"]
          env:
            - name: BACKEND
              value: tgt70
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: tgt70
spec:
  selector:
    app: tgt70
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tgt30
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tgt30
  template:
    metadata:
      labels:
        app: tgt30
    spec:
      containers:
        - name: kat-server
          image: (env('KAT_SERVER_IMAGE'))
          imagePullPolicy: IfNotPresent
          command: ["/work/kat-server"]
          env:
            - name: BACKEND
              value: tgt30
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: tgt30
spec:
  selector:
    app: tgt30
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: getambassador.io/v3alpha1
kind: Listener
metadata:
  name: tcp-listener
spec:
  ambassador_id: [(env('SLOT'))]
  port: 6789
  protocol: TCP
  securityModel: INSECURE
  hostBinding:
    namespace:
      from: ALL
---
apiVersion: getambassador.io/v3alpha1
kind: TCPMapping
metadata:
  name: tgt70
spec:
  ambassador_id: [(env('SLOT'))]
  port: 6789
  service: tgt70:8080
  weight: 70
---
apiVersion: getambassador.io/v3alpha1
kind: TCPMapping
metadata:
  name: tgt30
spec:
  ambassador_id: [(env('SLOT'))]
  port: 6789
  service: tgt30:8080
  weight: 30
